[package]
name = "slashcloud"
version = "0.1.0"
authors = ["Josh Koike <jk@tilting.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ratelimit"]
# Keep command to json in wasm targets (Normally removed for binary size)
keep_json = []
discord = []
ratelimit = []

[dependencies]
worker = "^0.0.6"
serde_json = "1.0.67"
serde = {version = ">=1.0", features = ["derive"]}
js-sys = "0.3.*"
wasm-bindgen = "^0.2.76"
hex = "0.4.3"
serde_repr = "0.1"
async-trait = "0.1.51"
wasm-bindgen-futures = "0.4.28"
serde-wasm-bindgen = "^0.3.1"
worker-sys = "^0.0.2"

macros = {path = "macros"}

[dependencies.web-sys]
version = "0.3.*"
features = ["Crypto", "CryptoKey", "SubtleCrypto", "ServiceWorkerGlobalScope"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
